web-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: first-dev
spec:
  selector:
    matchLabels:
      app: flask-dev
  template:
    metadata:
      labels:
        app: flask-dev
    spec:
      containers:
        - name: flask-dev
          image: ajithkumarr/doc-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /var/lib/app/
              name: web-dev
      volumes:
        - name: web-dev
          persistentVolumeClaim:
            claimName: web-pv-claim
