postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: first-dev
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
