web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: first-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: flask-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-dev-service
                port:
                  number: 5000
